--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 .App {
-  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
+  text-align: center;
 }
 @keyframes App-logo-spin {
   from {
@@ -46,25 +46,11 @@ a{
   font-size: 40px;
   margin: 0;
 }
-/* .heading-title span{
-  position: relative;
-
+@media (max-width: 576px){
+  .container{
+    max-width: unset;
+  }
 }
-.heading-title span::before{
-  content: '';
-  width: 100%;
-  height: 2px;
-  background-color: #e46f9f;
-  position: absolute;
-  left: 0;
-  bottom: -20px;
-} */
-/* .bottom-heading{
-  width: 100%;
-  height: auto;
-  border-bottom: 1px solid #f7eaef;
-  position: relative;
-} */
 .signature{
   color: #eda8c5;
   position: relative;
