--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -19,6 +19,16 @@
             color: #f03372;
         }
     }
+    .change-bg{
+        border-radius: 50%;
+        padding: 3px 4px;
+        text-align: center;
+        background-color: rgba(255, 255, 255, 0.739);
+        cursor: pointer;
+        svg{
+            color: #920702;
+        }
+    }
     @media screen and (min-width: 992px){
         .header-desktop{
             .top-bar{
