--- a/client/src/components/includes/scss/product.scss
+++ b/client/src/components/includes/scss/product.scss
@@ -1,16 +1,39 @@
 
 .item-product{
     border: 1px solid #ccc;
+    background: #fff;
     &:hover{
-        img{
-            transform: scale(1.3);
-            transition: all .25s ease-in-out;
+        // img{
+        //     transform: scale(1.3);
+        //     transition: all .25s ease-in-out;
+        // }
+        .img-product{
+            &:before{
+                -webkit-animation: shine 1.1s;
+                animation: shine 1.1s;
+            }
         }
     }
     .img-product{
         width: 100%;
         min-height: 100%;
         overflow: hidden;
+        position: relative;
+        display: block;
+        &:before {
+        position: absolute;
+        top: 0;
+        left: -100%;
+        z-index: 2;
+        display: block;
+        content: '';
+        width: 50%;
+        height: 100%;
+        background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 100%);
+        background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,0.3) 100%);
+        -webkit-transform: skewX(-25deg);
+        transform: skewX(-25deg);
+    }
         img{
             width: 100%;
             height: auto;
@@ -47,8 +70,14 @@
         }
     }
 }
+@keyframes shine {100% {left: 125%}}
 @media screen and (min-width: 1200px ) {
     .hot-product{
+        .col:nth-child(n+6){
+            margin-top: 20px;
+        }
+    }
+    .product-page{
         .col:nth-child(n+6){
             margin-top: 20px;
         }
@@ -60,6 +89,11 @@
             margin-top: 20px;
         }
     }
+    .product-page{
+        .col:nth-child(n+5){
+            margin-top: 20px;
+        }
+    }
 }
 @media screen and (max-width: 991px) and (min-width: 768px) {
     .hot-product{
@@ -67,9 +101,19 @@
             margin-top: 20px;
         }
     }
+    .product-page{
+        .col:nth-child(n+4){
+            margin-top: 20px;
+        }
+    }
 }
 @media screen and (max-width: 767px) {
     .hot-product{
+        .col:nth-child(n+3){
+            margin-top: 20px;
+        }
+    }
+    .product-page{
         .col:nth-child(n+3){
             margin-top: 20px;
         }
