--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -214,6 +214,7 @@
                     list-style: none;
                     padding: 0;
                     margin: 0;
+                    position: relative;
                     li{
                         padding: 8px 10px;
                         position: relative;
@@ -240,6 +241,12 @@
                                 }
                             }
                         }
+                    }
+                    &:hover>.dialog_cart{
+                        visibility: visible;
+                        z-index: 999;
+                        transition: .25s ease-in-out;
+                        top: 40px;
                     }
                 }
             }
